# py-calling-agent

./: CONTRIBUTING.md  README.md  pyproject.toml
examples/: basic_usage.py  multi_turn.py  object_methods.py  variable_state.py
src/py_calling_agent/: agent.py  prompts.py
tests/: conftest.py  test_basic_usage.py  test_multi_turn.py  test_object_methods.py  test_object_state.py  test_variable_state.py
