[project]
name = "py-calling-agent"
version = "0.2.0"
description = "A Python agent framework that enables function-calling through LLM code generation"
readme = "README.md"
authors = [
    { name = "Maohao", email = "codermao@gmail.com" },
    { name = "Cooper", email = "cooperimmaculate@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.0.2",
    "openai>=1.69.0",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
